corrected mistake with overflow in character.

--- a/src/components/Character/styles.scss
+++ b/src/components/Character/styles.scss
@@ -321,7 +321,7 @@
 				height: 17.5vh;
 
 				.body {
-					overflow-x: scroll;
+					overflow-y: scroll;
 					width: calc(100% + 18px);
 				}
 			}
